// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OptionsSelectToggle/> default properties 1`] = `
<div
  className="margin-bottom"
>
  <span
    className="right-spacing"
  >
    View
    :
  </span>
  <div
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    <select
      className="form-control"
      id="view-select-toggle"
      onChange={[Function]}
      value="first"
    >
      <option
        value="first"
      >
        First Label
      </option>
      <option
        value="second"
      >
        Second Label
      </option>
    </select>
  </div>
</div>
`;

exports[`<OptionsSelectToggle/> invalid selection and optional props 1`] = `
<div
  className="margin-bottom"
>
  <span
    className="right-spacing"
  >
    Test Label
    :
  </span>
  <div
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    <select
      className="form-control"
      id="test-id"
      onChange={[Function]}
      value="bogus"
    >
      <option
        value="first"
      >
        First Label
      </option>
      <option
        value="second"
      >
        Second Label
      </option>
    </select>
  </div>
</div>
`;
